objects/VR_Related_Leads__c.object
<CustomObject>
    <description>STS PR3.0 - Junction Object between Lead and Visit Report</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Text(Lead__r.Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Lead__r.Company</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Visit__c</fullName>
        <formula>Visit_Report__r.Date_of_Visit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_and_Time__c</fullName>
        <formula>Visit_Report__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Lead__r.Id, Lead__r.Full_Name__c)</formula>
        <label>Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>Text(Lead__r.Status)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>Related_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Visit_Report__r.Location__c</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <formula>IF(ISBLANK( Visit_Report__r.Owner:Queue.QueueName ), 
Visit_Report__r.Owner:User.FirstName,
Visit_Report__r.Owner:Queue.QueueName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Name__c</fullName>
        <formula>IF(ISBLANK( Visit_Report__r.Owner:Queue.QueueName ), 
Visit_Report__r.Owner:User.LastName,
Visit_Report__r.Owner:Queue.QueueName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Lead__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VR_Account__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+Visit_Report__r.Account__r.Id, Visit_Report__r.Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VR_Created_Date__c</fullName>
        <formula>Visit_Report__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Report_Name__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Visit_Report__r.Id, Visit_Report__r.Name)</formula>
        <label>Visit Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>Related_Leads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Related_Leads__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Related Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related Lead</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Related Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>